# rec-corder

./: .geminiignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL_v0.1.6.md  LICENSE  README.md  SECURITY.md  UPDATE.md  build.ps1  build.sh  package-lock.json  package.json  policy-readonly-shell.toml  policy-triage.toml  policy.toml  version.txt
.gemini/: policy.toml  settings.json
.github/commands/: gemini-commit-review.toml  gemini-invoke.toml  gemini-issue-analyzer.toml  gemini-plan-execute.toml  gemini-review.toml  gemini-scheduled-triage.toml  gemini-triage.toml
.github/workflows/: ai-review.yml  gemini-commit-review.yml  gemini-dispatch.yml  gemini-invoke.yml  gemini-issue-analyzer.yml  gemini-issue-fixer.yml  gemini-plan-execute.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml  release.yml
cli/: logo_art.py  main.py
scripts/: ai-review.cjs  build-cli.js  download-python.js  generate-installer-assets.js  generate-installer-assets.ps1  generate-logo-ansi.py  run-cli-dev.js  sync-version.js  sync.js
src/: index.html  release-notes.html  settings.html  splash.html  updater.html
src-tauri/: Cargo.toml  build.rs  check.txt  com.reccorder.app.metainfo.xml  download_ffmpeg.ps1  nsis_hook.nsh  pre_install.ps1  tauri.conf.json  test_capture.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  errors.rs  lib.rs  main.rs  python_api.rs  state.rs
src-tauri/src/commands/: ffmpeg.rs  mod.rs  recorder.rs  updater.rs
src-tauri/src/services/: audio.rs  capture.rs  mod.rs  watchdog.rs
src-tauri/src/services/capture/: ffmpeg.rs  linux.rs  mod.rs  session.rs  windows.rs
src/scripts/: app.js  dom.js  events.js  prefs.js  recorder.js  release-notes.js  settings.js  splash.js  timer.js  ui-state.js  updater.js  utils.js
src/styles/: layout.css  main.css  reset.css  settings.css  utilities.css  variables.css
src/styles/components/: buttons.css  crash-banner.css  modal.css  settings-panel.css  status-bar.css  timer.css
