[package]
name = "rec-corder"
version = "0.3.1"
description = "Ultra-light screen recorder"
authors = ["Breno"]
edition = "2021"

[lib]
name = "rec_corder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
parking_lot = "0.12"
regex = "1"
dirs-next = "2.0"
reqwest = { version = "0.11", features = ["stream"] }
windows = { version = "0.58", features = [
  "Win32_Devices_FunctionDiscovery",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Media_Audio",
  "Win32_Media_KernelStreaming",
  "Win32_Media_Multimedia",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell_PropertiesSystem",
] }
semver = "1.0.28"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
